@@ -1,5 +1,6 @@
 v6.4
 -----
++ Added a progress bar to the header that indicates if Enhanced Steam is processing requests
 
 
 v6.3.5
